<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/sky_blue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gunmetal"
        />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/sky_blue"
    >


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBoy"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioGirl"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/weight_in_pounds" />

        <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="0"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewHours"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/hours_since_last_drink" />

        <EditText
            android:id="@+id/editTextHour"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"     />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewBeer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/beers" />

        <EditText
            android:id="@+id/editTextBeer"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"     />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewWine"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cups_of_wine" />

        <EditText
            android:id="@+id/editTextWine"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"     />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewStrongShot"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/strong_shots_appr_40_abv" />

        <EditText
            android:id="@+id/editTextStrongShot"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"     />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewMixedShots"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/mixed_shots_appr_20_abv" />

        <EditText
            android:id="@+id/editTextMixedShots"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"     />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bac"
        android:onClick="calculateBAC" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


</LinearLayout>
</LinearLayout>